--- a/032/02.md
+++ b/032/02.md
@@ -1,2 +1,33 @@
 # 移动端是怎么做适配的？
 
+1. 使用 `meta:viewport`,即在 `HTML` 中添加 `<meta>` 标签并设置 `viewport`
+
+```HTML
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+<!-- width:一个正整数或者字符串device-width, 定义viewport（视口）的宽度。 -->
+<!-- height:一个正整数或者字符串device-height,	定义viewport（视口）的高度。 -->
+<!-- initial-scale:一个0.0 到10.0之间的正数, 定义设备宽度（纵向模式下的设备宽度或横向模式下的设备高度）与视口大小之间的缩放比率。 -->
+<!-- maximum-scale:一个0.0 到10.0之间的正数, 定义缩放的最大值；它必须大于或等于minimum-scale的值，不然会导致不确定的行为发生。 -->
+<!-- minimum-scale:一个0.0 到10.0之间的正数，定义缩放的最小值；它必须小于或等于maximum-scale的值，不然会导致不确定的行为发生。 -->
+<!-- user-scalable: 一个布尔值如果设置为 no，用户将不能放大或缩小网页。默认值为 yes。 -->
+```
+
+2. 不同的视口使用不同的样式，可以使用媒体查询
+
+```CSS
+@media screen and (min-width: 900px) {
+  article {
+    padding: 1rem 3rem;
+  }
+}
+
+/* 也可以使用 link 标签 */
+<link rel="stylesheet" href="style.css" media="screen and (max-width: 980px)">
+```
+
+3. 采用动态rem方案
+
+```HTML
+
+```
