--- a/032/05.md
+++ b/032/05.md
@@ -1,11 +1,43 @@
 # `call、apply、bind` 的用法分别是什么？
 
-## `call`
+> - `call`、`apply`、`bind` 都是 `Function`对象自带的三个方法。
+>
+> 1. `call` 是函数的正常调用方式，并指定上下文 `this`。
+> 2. `apply` 的作用和 `call` 一样，只是在调用的时候，传参数的方式不同。区别是 `apply` 接受的是数组参数，`call` 接受的是连续参数。
+> 3. `bind` 接受的参数跟 `call` 一致，只是 `bind` 不会立即调用，它会生成一个新的函数。
 
+- `call()` 方法使用一个指定的 `this` 值和单独给出的一个或多个参数来调用一个函数。
+    - 它的语法和作用与 `apply()` 方法类似，只有一个区别，就是 `call()` 方法接受的是一个参数列表，而 `apply()` 方法接受的是一个包含多个参数的数组。
 
+- `apply()` 方法调用一个具有给定 `this` 值的函数，以及作为一个数组（或类似数组对象）提供的参数。
 
-## `apply`
+```JS
+function sum(num1,num2) {
+    return num1 + num2;
+}
+function callSum(num1,num2) {
+    return sum.call(this,num1,num2);
+}
+function applySum() {
+    // return sum.apply(this,arguments);    // 传入 arguments 对象
+    return sum.apply(this,[num1,num2]);     // 传入数组
+}
+```
 
+- `bind()` 方法创建一个新的函数(绑定函数)，在调用时设置 `this` 关键字为提供的值。并在调用新函数时，将给定参数列表作为原函数的参数序列的前若干项。
 
+```JS
+var module = {
+  x: 42,
+  getX: function(n) {
+    console.log(n);
+    return this.x;
+  }
+}
 
-## `bind`
+var unboundGetX = module.getX;
+console.log(unboundGetX.call(module,99));
+
+var boundGetX = unboundGetX.bind(module,999);
+console.log(boundGetX(23));
+```
